--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
-name: Java CI
+name: Java CI/CD Advanced
 
 on: [push, pull_request]
 
 jobs:
-  unit-tests:
+  # 1. Compilation et vérification de sécurité
+  build-and-security:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -11,9 +12,32 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Run unit tests
-        run: mvn test -Dtest=PricingServiceTest,passwordPolicyTest
+          cache: 'maven'
+      - name: Dependency Scan (Security)
+        # Vérifie si tes bibliothèques ont des failles connues
+        run: mvn dependency-check:check
 
+  # 2. Tests Unitaires + Couverture de code
+  unit-tests:
+    runs-on: ubuntu-latest
+    needs: build-and-security
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: 'maven'
+      - name: Run Tests with Jacoco
+        # Génère un rapport de couverture de code
+        run: mvn test
+      - name: Upload Coverage Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-report
+          path: target/site/jacoco/
+
+  # 3. Analyse de qualité (Tes checks actuels)
   quality:
     runs-on: ubuntu-latest
     needs: unit-tests
@@ -26,6 +50,7 @@ jobs:
       - name: Quality checks (Checkstyle + SpotBugs)
         run: mvn verify -DskipTests
 
+  # 4. Tests d'Intégration
   integration-tests:
     runs-on: ubuntu-latest
     needs: [unit-tests, quality]
@@ -35,6 +60,23 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Run integration tests
-        run: mvn test -Dtest=PricingIntegrationTest,ConfigIntegrationTest
+      - name: Run Integration tests
+        run: mvn test -Dtest=*IntegrationTest,UserServiceTest
 
+  # 5. Job final : Packaging (Création du JAR)
+  package:
+    runs-on: ubuntu-latest
+    needs: integration-tests
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Build Final JAR
+        run: mvn package -DskipTests
+      - name: Store Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: order-service-app
+          path: target/*.jar
