--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   # 1. Compilation et vérification de sécurité
-  build-and-security:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -13,9 +13,8 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'maven'
-      - name: Dependency Scan (Security)
-        # Vérifie si tes bibliothèques ont des failles connues
-        run: mvn dependency-check:check -DfailOnError=false
+      - name: Run unit tests
+        run: mvn test
   # 2. Tests Unitaires + Couverture de code
   unit-tests:
     runs-on: ubuntu-latest
