--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Java CI/CD Advanced
 on: [push, pull_request]
 
 jobs:
-  # 1. Compilation et vérification de sécurité
+  # 1. Compilation + Tests Unitaires + Jacoco
   build-and-test:
     runs-on: ubuntu-latest
     steps:
@@ -13,45 +13,32 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: 'maven'
-      - name: Run unit tests
-        run: mvn test
-  # 2. Tests Unitaires + Couverture de code
-  unit-tests:
-    runs-on: ubuntu-latest
-    needs: build-and-security
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
-        with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Run Tests with Jacoco
-        # Génère un rapport de couverture de code
+      - name: Build and Run Unit Tests
         run: mvn test
       - name: Upload Coverage Report
+        if: always() # Pour avoir le rapport même si un test échoue
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: target/site/jacoco/
 
-  # 3. Analyse de qualité (Tes checks actuels)
+  # 2. Analyse de qualité (Checkstyle)
   quality:
     runs-on: ubuntu-latest
-    needs: unit-tests
+    needs: build-and-test
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           java-version: '11'
           distribution: 'temurin'
-      - name: Quality checks (Checkstyle + SpotBugs)
-        run: mvn verify -DskipTests
+      - name: Quality checks (Checkstyle)
+        run: mvn checkstyle:check
 
-  # 4. Tests d'Intégration
+  # 3. Tests d'Intégration
   integration-tests:
     runs-on: ubuntu-latest
-    needs: [unit-tests, quality]
+    needs: [quality] # On attend juste que la qualité soit OK
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -61,7 +48,7 @@ jobs:
       - name: Run Integration tests
         run: mvn test -Dtest=*IntegrationTest,UserServiceTest
 
-  # 5. Job final : Packaging (Création du JAR)
+  # 4. Job final : Packaging
   package:
     runs-on: ubuntu-latest
     needs: integration-tests
